uppercase to head
uppercase to head

--- a/Discount_Calculator.html
+++ b/Discount_Calculator.html
@@ -29,6 +29,7 @@
             text-align: center;
             background-color: #0C64FF;
             color: white;
+            text-transform: uppercase;
         }
 
         p, label {
