--- a/form (1).html
+++ b/form (1).html
@@ -93,7 +93,7 @@
             <tr>
               <td><label> Age </label></td>
               <td>
-                <input type="number" required placeholder="Only age  >= 18 allowed" />
+                <input type="number" required placeholder="Only age <18 allowed" />
               </td>
             </tr>
             <tr>
