--- a/subscri_plan2.html
+++ b/subscri_plan2.html
@@ -18,7 +18,7 @@
             border: 2px solid #E2E2E2;
             border-radius: 10px;
             margin-top: 230px;
-            margin-left: 300px; 
+            margin-left: 400px; 
             position: static; 
             background-color: rgb(255,250,250);                      
         }
@@ -27,22 +27,24 @@
             display: inline-block;
             border: 2px solid #E2E2E2;
             border-radius: 10px;
-            margin-top: 10px;
-            margin-left: 80px;
+            /* margin-top: 10px;
+            margin-left: 80px; */
             z-index: 100px;
-            background-color: rgb(255,250,250);                      
+            background-color: rgb(255,250,250); 
+            position: relative;                 
+            left: 40px; 
+            bottom: 40px;   
         }
-        .plan2:hover{
+        /* .plan2:hover{
             position: absolute;
-        }
+        } */
 
         .plan3{
             display: inline-block;
             border: 2px solid #E2E2E2;
             border-radius: 10px;
             background-color: rgb(255,250,250);  
-            top: 10px;
-            left: 380px;
+            left: 80px;
             position: relative ;
                                 
         }
@@ -96,6 +98,7 @@
             font-size: 23px;
             background-color: #1D8321;
             color: white;
+            margin-right: 50px;
         }
 
         button:hover{
