--- a/SchoolSummery.html
+++ b/SchoolSummery.html
@@ -90,8 +90,7 @@
 
        span{
             color: #00C1FF;
-
-            margin-right: 5px;
+            display: inline-block;
         }
 
         img{
@@ -111,12 +110,12 @@
             <h2 class="head">why Summer School <br>at great laked?</h2>
 
             <ul >
-                <li class="ln1"><span>Business, team and leadership</span>skill and learn what it takes to succeed in the real world.</li>
-                <li class="ln2"><span>Understand in the depthabout complexity of society</span>Understand in the depthabout complexity of society & businesses in the digital age.</li>
-                <li class="ln3"><span>Learn Structured decision</span>makingthrough case-based discussion.</li>
-                <li class="ln4"><span>Get hands-on experienceof the real world</span>scenarios through simulation, gamifield and <br> experiential learning.</li>
-                <li class="ln5"><span>Employ the design thinking & learn</span>leveranging data for better decison making.</li>
-                <li class="ln6"><span>Strengthen your profile and CV with</span>industry skills gained along with Great Lakes certificates. </li>
+                <li class="ln1">Business, team and leadership  skill and learn what it takes to succeed in the real world.</li>
+                <li class="ln2">Understand in the depthabout complexity of society & businesses in the digital age.</li>
+                <li class="ln3">Learn Structured decision makingthrough case-based discussion.</li>
+                <li class="ln4">Get hands-on experienceof the real world  scenarios through simulation, gamifield and <br> experiential learning.</li>
+                <li class="ln5">Employ the design thinking & learn leveranging data for better decison making.</li>
+                <li class="ln6">Strengthen your profile and CV with industry skills gained along with Great Lakes certificates. </li>
             </ul>
 
         </div>
