added changes in schoolsummery.html
added changes in schoolsummery.html

--- a/SchoolSummery.html
+++ b/SchoolSummery.html
@@ -15,7 +15,7 @@
         margin-top: 100px;
         margin-left: 550px;
         margin-right: 400px;
-        padding: 20px 20px 20px 20px;
+        padding: 0px 20px 20px 20px;
         border: 2px solid black;
        }
 
@@ -31,13 +31,19 @@
        ul{
         list-style-type: none;
         padding-left: 0px;
+        margin: 12px 15px 12px 15px;
+        font-family: 'Libre Baskerville', serif;
        }
 
        li{
         position: relative;
-        padding: 5px;
+        padding: 10px;
         line-height: 1.5; /* Add line-height for proper spacing */
         display: flex; /* Add flex display to align lines */
+       }
+
+       .ln2{
+        left: 7px;
        }
 
         ul li.ln1::before {
@@ -52,7 +58,7 @@
         content: "\f0eb"; 
         font-family: "FontAwesome"; 
         margin-right: 25px;
-        font-size: 20px;
+        font-size: 25px;
         color: #24AA2E;
         }
 
@@ -90,7 +96,8 @@
 
        span{
             color: #00C1FF;
-            display: inline-block;
+
+            margin-right: 5px;
         }
 
         img{
@@ -110,12 +117,12 @@
             <h2 class="head">why Summer School <br>at great laked?</h2>
 
             <ul >
-                <li class="ln1">Business, team and leadership  skill and learn what it takes to succeed in the real world.</li>
-                <li class="ln2">Understand in the depthabout complexity of society & businesses in the digital age.</li>
-                <li class="ln3">Learn Structured decision makingthrough case-based discussion.</li>
-                <li class="ln4">Get hands-on experienceof the real world  scenarios through simulation, gamifield and <br> experiential learning.</li>
-                <li class="ln5">Employ the design thinking & learn leveranging data for better decison making.</li>
-                <li class="ln6">Strengthen your profile and CV with industry skills gained along with Great Lakes certificates. </li>
+                <li class="ln1"><div><span>Business, team and leadership skill</span> and learn<br> what it takes to succeed in the real world.</div></li>
+                <li class="ln2"><div><span>Understand in the depth</span> about complexity of society Understand in the depth about complexity of society & businesses in the digital age.</div></li>
+                <li class="ln3"><div><span>Learn Structured decision making through</span><br> case-based discussion.</div></li>
+                <li class="ln4"><div><span>Get hands-on experience</span> of the <span>real world</span><br><span>scenarios</span> through simulation, gamifield and<br> experiential learning.</div></li>
+                <li class="ln5"><div><span>Employ the design thinking</span> & learn leveranging data<br> for better decison making.</div></li>
+                <li class="ln6"><div><span>Strengthen your profile</span> and CV with industry skills<br> gained along with Great Lakes certificates.</div> </li>
             </ul>
 
         </div>
