--- a/exp.html
+++ b/exp.html
@@ -111,12 +111,12 @@
             <h2 class="head">why Summer School <br>at great laked?</h2>
 
             <ul >
-                <li class="ln1"><span>Business, team and leadership</span>skill and learn what it takes to succeed in the real world.</li>
-                <li class="ln2"><span>Understand in the depthabout complexity of society</span>Understand in the depthabout complexity of society & businesses in the digital age.</li>
-                <li class="ln3"><span>Learn Structured decision</span>makingthrough case-based discussion.</li>
-                <li class="ln4"><span>Get hands-on experienceof the real world</span>scenarios through simulation, gamifield and <br> experiential learning.</li>
-                <li class="ln5"><span>Employ the design thinking & learn</span>leveranging data for better decison making.</li>
-                <li class="ln6"><span>Strengthen your profile and CV with</span>industry skills gained along with Great Lakes certificates. </li>
+                <li class="ln1"><div><span>Business, team and leadership</span>skill and learn what it takes to succeed in the real world.</div></li>
+                <li class="ln2"><div><span>Understand in the depthabout complexity of society</span>Understand in the depthabout complexity of society & businesses in the digital age.</div></li>
+                <li class="ln3"><div><span>Learn Structured decision</span>makingthrough case-based discussion.</div></li>
+                <li class="ln4"><div><span>Get hands-on experienceof the real world</span>scenarios through simulation, gamifield and <br> experiential learning.</div></li>
+                <li class="ln5"><div><span>Employ the design thinking & learn</span>leveranging data for better decison making.</div></li>
+                <li class="ln6"><div><span>Strengthen your profile and CV with</span>industry skills gained along with Great Lakes certificates.</div> </li>
             </ul>
 
         </div>
