--- a/navBar2.html
+++ b/navBar2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By Code4Education -->
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
@@ -11,9 +11,6 @@
   </head>
   <body>
     <nav>
-      <div class="menu-icon">
-        <span class="fas fa-bars"></span>
-      </div>
 
       <div class="logo">ParthGurval</div>
 
@@ -21,6 +18,18 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Service</a></li>
         <li><a href="#">Gallery</a></li>
+        <!-- <li>
+          <div class="dropdown">
+            <button class="dropbtn">Dropdown 
+              <i class="fa fa-sort-desc" aria-hidden="true"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="#" style="color: black;">Link 1</a>
+              <a href="#" style="color: black;">Link 2</a>
+              <a href="#" style="color: black;">Link 3</a>
+            </div>
+          </div>
+        </li> -->
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </div>
@@ -40,7 +49,7 @@
           placeholder="Search"
           required
         />
-        <button type="submit">Search</button>
+        <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
       </form>
     </nav>
   </body>
